--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,440 @@ uvicorn~=0.34.2
 fastapi~=0.115.12
 SQLAlchemy~=2.0.40
 pydantic~=2.11.4
+
+// rag部分所需依赖
+accelerate==0.32.0
+aiocache==0.12.3
+aiofiles==24.1.0
+aiohappyeyeballs==2.5.0
+aiohttp==3.11.11
+aiosignal==1.3.2
+airportsdata==20250224
+alembic==1.14.0
+annotated-types==0.7.0
+anthropic==0.49.0
+anyio==4.8.0
+appdirs==1.4.4
+APScheduler==3.10.4
+argilla==2.8.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+asgiref==3.8.1
+astor==0.8.1
+asttokens==3.0.0
+async-timeout==5.0.1
+attrs==25.1.0
+Authlib==1.4.1
+av==14.2.0
+azure-ai-documentintelligence==1.0.0
+azure-core==1.32.0
+azure-identity==1.20.0
+azure-storage-blob==12.24.1
+backcall==0.2.0
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.13.3
+bidict==0.23.1
+bitarray==3.1.1
+black==25.1.0
+blake3==1.0.4
+bleach==6.2.0
+blinker==1.9.0
+boto3==1.37.11
+botocore==1.37.11
+Brotli==1.1.0
+build==1.2.2.post1
+cachetools==5.5.2
+cbor==1.0.0
+certifi==2025.1.31
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.1
+chroma-hnswlib==0.7.6
+chromadb==0.6.2
+click==8.1.8
+cloudpickle==3.1.1
+colbert-ai==0.2.21
+colorclass==2.2.2
+coloredlogs==15.0.1
+colorlog==6.9.0
+compressed-tensors==0.9.2
+compressed_rtf==1.0.6
+cryptography==44.0.2
+ctranslate2==4.5.0
+cupy-cuda12x==13.4.1
+dataclasses-json==0.6.7
+datasets==3.3.2
+decorator==5.2.1
+defusedxml==0.7.1
+Deprecated==1.2.18
+depyf==0.18.0
+dill==0.3.8
+diskcache==5.6.3
+distro==1.9.0
+dnspython==2.7.0
+docker==7.1.0
+docopt==0.6.2
+docx==0.2.4
+docx2pdf==0.1.8
+docx2txt==0.8
+duckduckgo_search==7.3.2
+durationpy==0.9
+easygui==0.98.3
+ebcdic==1.1.1
+ecdsa==0.19.0
+einops==0.8.0
+elastic-transport==8.17.0
+elasticsearch==8.17.1
+email_validator==2.2.0
+emoji==2.14.1
+et_xmlfile==2.0.0
+eval_type_backport==0.2.2
+Events==0.5
+executing==2.2.0
+extract-msg==0.53.1
+faiss-gpu-cu12==1.10.0
+fake-useragent==1.5.1
+fast-langdetect==0.3.1
+fastapi==0.115.7
+fastapi-cli==0.0.7
+faster-whisper==1.1.1
+fastjsonschema==2.21.1
+fastrlock==0.8.3
+fasttext-predict==0.9.2.4
+filelock==3.17.0
+filetype==1.2.0
+firecrawl-py==1.12.0
+FlagEmbedding==1.3.4
+Flask==3.1.0
+flatbuffers==25.2.10
+fonttools==4.56.0
+fpdf2==2.8.2
+frozenlist==1.5.0
+fs==2.4.16
+fsspec==2024.12.0
+ftfy==6.2.3
+fuzzywuzzy==0.18.0
+gcp-storage-emulator==2024.8.3
+gguf==0.10.0
+git-python==1.0.3
+gitdb==4.0.12
+GitPython==3.1.44
+google-ai-generativelanguage==0.6.6
+google-api-core==2.24.2
+google-api-python-client==2.163.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+google-cloud-core==2.4.3
+google-cloud-storage==2.19.0
+google-crc32c==1.6.0
+google-generativeai==0.7.2
+google-resumable-media==2.7.2
+googleapis-common-protos==1.63.2
+greenlet==3.1.1
+grpcio==1.67.1
+grpcio-status==1.63.0rc1
+grpcio-tools==1.62.3
+h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
+html5lib==1.1
+httpcore==1.0.7
+httplib2==0.22.0
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.29.2
+humanfriendly==10.0
+hyperframe==6.1.0
+idna==3.10
+ijson==3.3.0
+importlib_metadata==8.4.0
+importlib_resources==6.5.2
+iniconfig==2.0.0
+inscriptis==2.6.0
+interegular==0.3.3
+ipython==8.12.3
+ir_datasets==0.5.10
+isodate==0.7.2
+itsdangerous==2.2.0
+jedi==0.19.2
+jieba==0.42.1
+Jinja2==3.1.6
+jiter==0.9.0
+jmespath==1.0.1
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+kubernetes==32.0.1
+langchain==0.3.23
+langchain-community==0.3.18
+langchain-core==0.3.51
+langchain-text-splitters==0.3.8
+langdetect==1.0.9
+langfuse==2.44.0
+langsmith==0.3.13
+lark==1.2.2
+ldap3==2.9.1
+llvmlite==0.43.0
+lm-format-enforcer==0.10.11
+loguru==0.7.3
+lxml==5.3.1
+lz4==4.4.4
+magic-pdf==0.6.1
+Mako==1.3.9
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+milvus-lite==2.4.11
+milvus-model==0.2.12
+mistral_common==1.5.4
+mistune==3.1.3
+mmh3==5.1.0
+modelscope==1.23.2
+monotonic==1.6
+moto==5.1.1
+mpmath==1.3.0
+msal==1.31.1
+msal-extensions==1.2.0
+msg-parser==1.2.0
+msgpack==1.1.0
+msgspec==0.19.0
+msoffcrypto-tool==5.4.2
+multidict==6.1.0
+multiprocess==0.70.16
+mypy-extensions==1.0.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+ninja==1.11.1.3
+nltk==3.8.1
+numba==0.60.0
+numpy==1.26.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-ml-py==12.570.86
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+nvitop==1.5.0
+oauthlib==3.2.2
+olefile==0.47
+oletools==0.60.2
+ollama==0.4.7
+onnxruntime==1.21.0
+open-webui==0.5.20
+openai==1.65.5
+opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
+openpyxl==3.1.5
+opensearch-py==2.8.0
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-instrumentation-asgi==0.48b0
+opentelemetry-instrumentation-fastapi==0.48b0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opentelemetry-util-http==0.48b0
+orjson==3.10.15
+outlines==0.1.11
+outlines_core==0.1.26
+overrides==7.7.0
+packaging==23.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+partial-json-parser==0.2.1.1.post5
+passlib==1.7.4
+pathspec==0.12.1
+pcodedmp==1.2.6
+pdfminer.six==20231228
+pdfplumber==0.11.5
+peewee==3.17.9
+peewee-migrate==1.12.2
+peft==0.15.1
+pexpect==4.9.0
+pgvector==0.3.5
+pickleshare==0.7.5
+pillow==11.1.0
+pipreqs==0.5.0
+platformdirs==4.3.6
+playwright==1.49.1
+pluggy==1.5.0
+portalocker==2.10.1
+posthog==3.19.1
+primp==0.14.0
+prometheus-fastapi-instrumentator==7.1.0
+prometheus_client==0.21.1
+prompt_toolkit==3.0.50
+propcache==0.3.0
+proto-plus==1.26.1
+protobuf==4.25.6
+psutil==7.0.0
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+py-partiql-parser==0.6.1
+pyarrow==19.0.1
+pyasn1==0.4.8
+pyasn1_modules==0.4.1
+pyclipper==1.3.0.post6
+pycountry==24.6.1
+pycparser==2.22
+pydantic==2.10.6
+pydantic-settings==2.8.1
+pydantic_core==2.27.2
+pydub==0.25.1
+pyee==12.0.0
+Pygments==2.19.1
+PyJWT==2.10.1
+pymdown-extensions==10.14.2
+pymilvus==2.5.6
+pymilvus.model==0.3.2
+pymongo==4.11.2
+PyMuPDF==1.25.3
+PyMySQL==1.1.1
+pypandoc==1.13
+pyparsing==3.2.1
+pypdf==4.3.1
+pypdfium2==4.30.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pytest==8.3.5
+pytest-docker==3.1.2
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-dotenv==1.0.1
+python-engineio==4.11.2
+python-iso639==2025.2.18
+python-jose==3.4.0
+python-json-logger==3.3.0
+python-magic==0.4.27
+python-multipart==0.0.18
+python-oxmsg==0.0.2
+python-pptx==1.0.0
+python-socketio==5.11.3
+pytube==15.0.0
+pytz==2025.1
+pywpsrpc==2.3.9
+pyxlsb==1.0.10
+PyYAML==6.0.2
+pyzmq==26.3.0
+qdrant-client==1.12.2
+rank-bm25==0.2.2
+RapidFuzz==3.12.2
+rapidocr-onnxruntime==1.3.24
+ray==2.44.0
+red-black-tree-mod==1.22
+redis==5.2.1
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+responses==0.25.6
+RestrictedPython==8.0
+rich==13.9.4
+rich-toolkit==0.13.2
+robust-downloader==0.0.2
+rpds-py==0.23.1
+rsa==4.9
+RTFDE==0.1.2
+s3transfer==0.11.4
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==3.3.1
+sentencepiece==0.2.0
+shapely==2.0.7
+shellingham==1.5.4
+simple-websocket==1.1.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soundfile==0.13.1
+soupsieve==2.6
+SQLAlchemy==2.0.38
+sse-starlette==2.2.1
+stack-data==0.6.3
+standardwebhooks==1.0.0
+starlette==0.45.3
+sympy==1.13.1
+tenacity==9.0.0
+threadpoolctl==3.5.0
+tiktoken==0.9.0
+tinycss2==1.4.0
+tokenizers==0.21.0
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.49.0
+trec-car-tools==2.6
+triton==3.2.0
+typer==0.15.2
+types-Deprecated==1.2.15.20250304
+types-python-dateutil==2.9.0.20241206
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.12.2
+tzdata==2025.1
+tzlocal==5.3.1
+ujson==5.10.0
+unlzw3==0.2.3
+unstructured==0.6.3
+unstructured-client==0.31.1
+uritemplate==4.1.1
+urllib3==2.3.0
+uvicorn==0.34.0
+uvloop==0.21.0
+validators==0.34.0
+vllm==0.8.1
+warc3-wet==0.2.5
+warc3-wet-clueweb09==0.2.5
+watchfiles==1.0.4
+wcwidth==0.2.13
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.1.3
+wordninja==2.0.0
+wrapt==1.17.2
+wsproto==1.2.0
+xformers==0.0.29.post2
+xgrammar==0.1.16
+xlrd==2.0.1
+XlsxWriter==3.2.2
+xmltodict==0.14.2
+xxhash==3.5.0
+yarg==0.1.9
+yarl==1.18.3
+youtube-transcript-api==0.6.3
+zipp==3.21.0
+zlib-state==0.1.9
+zstandard==0.23.0
