Update .gitignore to exclude __pycache__ and log

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ env/            # 备用虚拟环境目录
 # 日志与临时文件
 # =========================
 *.log           # 日志文件
+log/            # 忽略整个 log 目录
 *.txt           # 临时文本文件（根据需要调整）
 temp/           # 临时目录
 uploads/        # 上传文件目录（根据实际情况调整）
@@ -34,7 +35,8 @@ secrets.json    # 敏感配置文件
 # =========================
 # 缓存与构建产物
 # =========================
-.cache/         # 缓存目录
+.cache/         # 缓存目录git
 build/          # 构建目录
 dist/           # 分发目录
 *.egg           # Python包文件
+app/routers/__pycache__/  # 忽略特定路径下的 __pycache__
