修改了分块模式，导入关系进行了优化，但是main路由无法正常启动，显示多次打开milvus

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,13 @@ env/            # 备用虚拟环境目录
 # 编译与生成文件
 # =========================
 *.pyc           # Python编译文件
+**/*.pyc
 *.pyo           # Python优化文件
+**/*.pyo
 *.pyd           # Python动态链接库
+**/*.pyd
 *.egg-info/     # Python包信息
+**/*.egg-info/
 
 # =========================
 # 日志与临时文件
@@ -24,6 +28,7 @@ log/            # 忽略整个 log 目录
 *.txt           # 临时文本文件（根据需要调整）
 temp/           # 临时目录
 uploads/        # 上传文件目录（根据实际情况调整）
+**/log
 
 # =========================
 # 数据库与敏感信息
